--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,18 +1,23 @@
 @font-face {
-    font-family: 'AvenirNext-Regular';
-    src: url('/assets/fonts/AvenirNext-Regular.ttf') format('ttf');
+    font-family: "Quicksand", sans-serif;
+    src: url(../assets/fonts/Quicksand-Regular.ttf);
+    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
 }
+
 @font-face {
-    font-family: 'AvenirNext-DemiBold';
-    src: url('/assets/fonts/AvenirNext-DemiBold.ttf') format('ttf');
-    font-weight: 700;
+    font-family: "Quicksand", sans-serif;
+    src: url(../assets/fonts/Quicksand-Medium.ttf);
+    font-optical-sizing: auto;
+    font-weight: 500;
     font-style: normal;
 }
+
 @font-face {
-    font-family: 'AvenirNext-Medium';
-    src: url('/assets/fonts/AvenirNext-Medium.ttf') format('ttf');
+    font-family: "Quicksand", sans-serif;
+    src: url(../assets/fonts/Quicksand-SemiBold.ttf);
+    font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
 }
